@@ -77,6 +77,8 @@ coords.smooth.roc <- function(smooth.roc, x, input=c("specificity", "sensitivity
       npv <- 100 * tn / (tn + fn)
       ppv <- 100 * tp / (tp + fp)
       accuracy <- 100 * (tp + tn) / (tp + tn + fp + fn)
+      precision <- 100 * (tp) / (tp + fp)
+      recall <- 100 * (tp) / (tp + fn)
       substr.percent <- 100
     }
     else {
@@ -87,11 +89,13 @@ coords.smooth.roc <- function(smooth.roc, x, input=c("specificity", "sensitivity
       npv <- tn / (tn + fn)
       ppv <- tp / (tp + fp)
       accuracy <- (tp + tn) / (tp + tn + fp + fn)
+      precision <- (tp) / (tp + fp)
+      recall <- (tp) / (tp + fn)
       substr.percent <- 1
     }
     if (length(se) == 1) {
       if (as.list) {
-        list <- list(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv)[ret]
+        list <- list(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv, precision=precision, recall=recall)[ret]
         if (drop == FALSE) {
           list <- list(list)
           names(list) <- x
@@ -99,7 +103,7 @@ coords.smooth.roc <- function(smooth.roc, x, input=c("specificity", "sensitivity
         return(list)
       }
       else {
-        res <- c(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv)[ret]
+        res <- c(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv, precision=precision, recall=recall)[ret]
         if (drop == FALSE) {
         }
         return(res)
@@ -107,12 +111,12 @@ coords.smooth.roc <- function(smooth.roc, x, input=c("specificity", "sensitivity
     }
     else if (length(se) > 1) {
       if (as.list) {
-        co <- apply(rbind(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv), 2, as.list)
+        co <- apply(rbind(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv, precision=precision, recall=recall), 2, as.list)
         names(co) <- rep("best", length(co))
         return(co)
       }
       else {
-        co <- rbind(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv)
+        co <- rbind(sensitivity=se, specificity=sp, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv, precision=precision, recall=recall)
         colnames(co) <- rep(x, dim(co)[2])
         return(co)
       }
@@ -296,6 +300,8 @@ coords.roc <- function(roc, x, input=c("threshold", "specificity", "sensitivity"
       npv <- 100 * tn / (tn + fn)
       ppv <- 100 * tp / (tp + fp)
       accuracy <- 100 * (tp + tn) / (tp + tn + fp + fn)
+      precision <- 100 * (tp) / (tp + fp)
+      recall <- 100 * (tp) / (tp + fn)
       substr.percent <- 100
     }
     else {
@@ -306,10 +312,12 @@ coords.roc <- function(roc, x, input=c("threshold", "specificity", "sensitivity"
       npv <- tn / (tn + fn)
       ppv <- tp / (tp + fp)
       accuracy <- 1 * (tp + tn) / (tp + tn + fp + fn)
+      precision <- (tp) / (tp + fp)
+      recall <- (tp) / (tp + fn)
       substr.percent <- 1
     }
     if (as.list) {
-      list <- list(threshold=res[1], specificity=sp, sensitivity=se, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv)
+      list <- list(threshold=res[1], specificity=sp, sensitivity=se, accuracy=accuracy, tn=tn, tp=tp, fn=fn, fp=fp, npv=npv, ppv=ppv, "1-specificity"=substr.percent-sp, "1-sensitivity"=substr.percent-se, "1-accuracy"=substr.percent-accuracy, "1-npv"=substr.percent-npv, "1-ppv"=substr.percent-ppv, precision=precision, recall=recall)
       list <- list[ret]
       if (drop == FALSE) {
         list <- list(list)
@@ -319,8 +327,8 @@ coords.roc <- function(roc, x, input=c("threshold", "specificity", "sensitivity"
     }
     else {
       res <- as.matrix(res)
-      res <- rbind(res, accuracy, tn, tp, fn, fp, npv, ppv, substr.percent-sp, substr.percent-se, substr.percent-accuracy, substr.percent-npv, substr.percent-ppv)
-      rownames(res) <- c("threshold", "specificity", "sensitivity", "accuracy", "tn", "tp", "fn", "fp", "npv", "ppv", "1-specificity", "1-sensitivity", "1-accuracy", "1-npv", "1-ppv")
+      res <- rbind(res, accuracy, tn, tp, fn, fp, npv, ppv, substr.percent-sp, substr.percent-se, substr.percent-accuracy, substr.percent-npv, substr.percent-ppv, precision, recall)
+      rownames(res) <- c("threshold", "specificity", "sensitivity", "accuracy", "tn", "tp", "fn", "fp", "npv", "ppv", "1-specificity", "1-sensitivity", "1-accuracy", "1-npv", "1-ppv", "precision", "recall")
       colnames(res) <- x
       return(res[ret,, drop=drop])
     }
